Added a run task

--- a/build.xml
+++ b/build.xml
@@ -45,6 +45,11 @@
 
     <chmod file="${file.jar}" perm="u+x" />
   </target>
+	
+  <!-- Create a JAR and run it -->
+  <target name="run" depends="jar">
+    <java jar="${file.jar}" fork="true" />
+  </target>
 
 
   <!-- Clean old compilations -->
